--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,18 +1,28 @@
-name: Codecov
+---
+name: codecov
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 jobs:
-  check:
+  codecov:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: true
-        verbose: true
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-
+      - name: Run tests
+        run: mvn install -Pjacoco
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
