--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,3 +1,3 @@
 merge:
   script: |
-    LC_ALL=C mvn clean install -Pqulice --errors -Dstyle.color=never
+    mvn clean install -Pqulice --errors -Dstyle.color=never
